--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "drupal/jquery_ui_touch_punch": "*",
         "drupal/layout_builder_component_attributes": "*",
         "drupal/layout_builder_restrictions": "*",
+        "drupal/layout_custom_section_classes": "*",
         "drupal/libraries": "*",
         "drupal/linkit": "*",
         "drupal/maillog": "*",
