--- a/config/sync/core.entity_view_display.paragraph.bild_verlinkt.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.bild_verlinkt.default.yml
@@ -3,6 +3,7 @@ langcode: de
 status: true
 dependencies:
   config:
+    - field.field.paragraph.bild_verlinkt.field_css_class
     - field.field.paragraph.bild_verlinkt.field_gallery_image
     - field.field.paragraph.bild_verlinkt.field_sli_link_heading
     - image.style.logo
@@ -26,4 +27,5 @@ content:
     weight: 0
     region: content
 hidden:
+  field_css_class: true
   field_sli_link_heading: true
