--- a/config/sync/views.view.bundesliga_news.yml
+++ b/config/sync/views.view.bundesliga_news.yml
@@ -13,6 +13,7 @@ dependencies:
     - 'taxonomy_term:tags:083be40f-b8ad-4c6e-9464-54d508bf3f14'
     - 'taxonomy_term:tags:791b8d8e-9a50-4a3e-b620-0433680980ad'
   module:
+    - hsk_views
     - image
     - node
     - taxonomy
@@ -502,6 +503,55 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        bundesliga_tags:
+          id: bundesliga_tags
+          table: views
+          field: bundesliga_tags
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: bundesliga_tags
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
         body:
           id: body
           table: node__body
