--- a/config/sync/views.view.bundesliga_news.yml
+++ b/config/sync/views.view.bundesliga_news.yml
@@ -648,7 +648,7 @@ display:
           entity_field: title
           plugin_id: field
           label: ''
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -711,7 +711,7 @@ display:
           admin_label: ''
           plugin_id: field
           label: ''
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -779,8 +779,8 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: "<div class=\"image-body\">\r\n    <div class=\"image\">{{ field_image }}</div>\r\n    <div class=\"text\">\r\n        <h2 class=\"title\">{{ title }}</h2>\r\n        <div class=\"body\">{{ body }}</div>\r\n    </div>    \r\n</div>"
             make_link: false
             path: ''
             absolute: false
