Anzeige Teaser für News Startseite

--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -570,8 +570,9 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: text_default
-          settings: {  }
+          type: text_summary_or_trimmed
+          settings:
+            trim_length: 600
           group_column: value
           group_columns: {  }
           group_rows: true
