--- a/config/sync/views.view.bundesliga_news.yml
+++ b/config/sync/views.view.bundesliga_news.yml
@@ -6,9 +6,10 @@ dependencies:
     - field.storage.node.body
     - field.storage.node.field_image
     - field.storage.node.field_tags
-    - image.style.bildblock_desktop
     - image.style.top_news
     - node.type.article
+    - responsive_image.styles.secondary_news
+    - responsive_image.styles.top_news
     - taxonomy.vocabulary.tags
   content:
     - 'taxonomy_term:tags:083be40f-b8ad-4c6e-9464-54d508bf3f14'
@@ -17,6 +18,7 @@ dependencies:
     - hsk_views
     - image
     - node
+    - responsive_image
     - taxonomy
     - text
     - user
@@ -373,6 +375,148 @@ display:
     position: 1
     display_options:
       fields:
+        uid:
+          id: uid
+          table: node_field_data
+          field: uid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          entity_field: uid
+          plugin_id: field
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: true
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        revision_timestamp:
+          id: revision_timestamp
+          table: node_revision
+          field: revision_timestamp
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          entity_field: revision_timestamp
+          plugin_id: field
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: timestamp
+          settings:
+            date_format: date_no_time
+            custom_date_format: ''
+            timezone: ''
+            tooltip:
+              date_format: long
+              custom_date_format: ''
+            time_diff:
+              enabled: false
+              future_format: '@interval hence'
+              past_format: '@interval ago'
+              granularity: 2
+              refresh: 60
+              description: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         field_image:
           id: field_image
           table: node__field_image
@@ -423,10 +567,10 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: image
+          type: responsive_image
           settings:
+            responsive_image_style: top_news
             image_link: content
-            image_style: top_news
             image_loading:
               attribute: lazy
           group_column: ''
@@ -515,8 +659,8 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: " <div class=\"meta\">\r\n        <span class=\"tags\">{{ bundesliga_tags }}</span>\r\n        <span class=\"author\">{{ uid }}</span>     \r\n        <span class=\"date\">{{ revision_timestamp }}</span>            \r\n  </div>"
             make_link: false
             path: ''
             absolute: false
@@ -917,7 +1061,7 @@ display:
           admin_label: ''
           plugin_id: field
           label: ''
-          exclude: true
+          exclude: false
           alter:
             alter_text: false
             text: ''
@@ -958,10 +1102,10 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: image
+          type: responsive_image
           settings:
+            responsive_image_style: secondary_news
             image_link: content
-            image_style: bildblock_desktop
             image_loading:
               attribute: lazy
           group_column: ''
@@ -986,7 +1130,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"image-body\">\r\n    <div class=\"image\">{{ field_image }}</div>\r\n    <div class=\"text\">\r\n        <h2 class=\"title\">{{ title }}</h2>\r\n        <div class=\"meta\">\r\n            <span class=\"date\">{{ revision_timestamp }}</span>\r\n            <span class=\"author\">{{ uid }}</span>\r\n            <span class=\"tags\">{{ field_tags }}</span>\r\n        </div>\r\n        <div class=\"body\">{{ body }}</div>\r\n    </div>    \r\n</div>"
+            text: "    <div class=\"text\">\r\n        <h2 class=\"title\">{{ title }}</h2>\r\n        <div class=\"meta\">\r\n           <span class=\"tags\">{{ field_tags }}</span>\r\n           <span class=\"author\">{{ uid }}</span>     \r\n        <span class=\"date\">{{ revision_timestamp }}</span>            \r\n        </div>\r\n        <div class=\"body\">{{ body }}</div>\r\n    </div>    \r\n"
             make_link: false
             path: ''
             absolute: false
