Revisionen aktivieren für Layout Page Inhaltstyp

--- a/config/sync/node.type.layout_page.yml
+++ b/config/sync/node.type.layout_page.yml
@@ -12,6 +12,6 @@ name: 'Layout Page'
 type: layout_page
 description: 'Für Layouts mit Layout-Builder'
 help: ''
-new_revision: false
+new_revision: true
 preview_mode: 1
 display_submitted: false
