Für Full HTML wieder ein paar CKEditor-Buttons aktiviert. Linkit aktiviert für Textbearbeitung.

--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -14,6 +14,11 @@ settings:
       - heading
       - bold
       - italic
+      - link
+      - bulletedList
+      - numberedList
+      - '|'
+      - sourceEditing
   plugins:
     ckeditor5_heading:
       enabled_headings:
@@ -22,4 +27,12 @@ settings:
         - heading4
         - heading5
         - heading6
+    ckeditor5_list:
+      reversed: true
+      startIndex: true
+    ckeditor5_sourceEditing:
+      allowed_tags: {  }
+    linkit_extension:
+      linkit_enabled: true
+      linkit_profile: default
 image_upload: {  }
