--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -111,6 +111,8 @@ filters:
       image_style_bildblock_mobile: '0'
       image_style_bildblock_tablet_portrait: '0'
       image_style_gallery_full: '0'
+      image_style_headerbild_inhaltsbreite: '0'
+      image_style_headerbild_inhaltsbreite_mobile: '0'
       image_style_header_slideshow: '0'
       image_style_header_slideshow_smartphone: '0'
       image_style_header_slideshow_tablet_portrait: '0'
@@ -121,6 +123,7 @@ filters:
       image_style_inline_full_width: '0'
       image_style_large: '0'
       image_style_linkit_result_thumbnail: '0'
+      image_style_logo: '0'
       image_style_max_1300x1300: '0'
       image_style_max_2600x2600: '0'
       image_style_max_325x325: '0'
@@ -133,6 +136,7 @@ filters:
       image_style_portrait_medium: '0'
       image_style_portrait_tiny: '0'
       image_style_thumbnail: '0'
+      image_style_top_news: '0'
   filter_responsive_image_style:
     id: filter_responsive_image_style
     provider: inline_responsive_images
@@ -140,12 +144,15 @@ filters:
     weight: -41
     settings:
       responsive_style_bildblock_klein: '0'
+      responsive_style_headerbild_inhaltsbreite: '0'
       responsive_style_header_slideshow: '0'
       responsive_style_infoblock: '0'
       responsive_style_inhaltsbild_volle_breite: '1'
       responsive_style_inhaltsbild_z_halbe_breite: '1'
       responsive_style_narrow: '0'
       responsive_style_news_thumb_startseite: '0'
+      responsive_style_secondary_news: '0'
+      responsive_style_top_news: '0'
       responsive_style_wide: '0'
   filter_responsive_tables_filter:
     id: filter_responsive_tables_filter
