--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -56,7 +56,8 @@ settings:
         - '<h5 id>'
         - '<h6 id>'
     linkit_extension:
-      linkit_enabled: false
+      linkit_enabled: true
+      linkit_profile: default
 image_upload:
   status: true
   scheme: public
