Config Changes von live

--- a/config/sync/filter.format.restricted_html.yml
+++ b/config/sync/filter.format.restricted_html.yml
@@ -17,7 +17,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<br> <p> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <cite> <dl> <dt> <dd> <a hreflang href> <blockquote cite> <ul type> <ol type start> <strong> <em> <code> <li>'
+      allowed_html: '<br> <p> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <cite> <dl> <dt> <dd> <a hreflang href data-entity-type data-entity-uuid data-entity-substitution> <blockquote cite> <ul type> <ol type start> <strong> <em> <code> <li>'
       filter_html_help: true
       filter_html_nofollow: false
   filter_autop:
@@ -40,12 +40,15 @@ filters:
     weight: 0
     settings:
       responsive_style_bildblock_klein: '0'
+      responsive_style_headerbild_inhaltsbreite: '0'
       responsive_style_header_slideshow: '0'
       responsive_style_infoblock: '0'
       responsive_style_inhaltsbild_volle_breite: '0'
       responsive_style_inhaltsbild_z_halbe_breite: '0'
       responsive_style_narrow: '0'
       responsive_style_news_thumb_startseite: '0'
+      responsive_style_secondary_news: '0'
+      responsive_style_top_news: '0'
       responsive_style_wide: '0'
   filter_imagestyle:
     id: filter_imagestyle
@@ -58,6 +61,8 @@ filters:
       image_style_bildblock_mobile: '0'
       image_style_bildblock_tablet_portrait: '0'
       image_style_gallery_full: '0'
+      image_style_headerbild_inhaltsbreite: '0'
+      image_style_headerbild_inhaltsbreite_mobile: '0'
       image_style_header_slideshow: '0'
       image_style_header_slideshow_smartphone: '0'
       image_style_header_slideshow_tablet_portrait: '0'
@@ -68,6 +73,7 @@ filters:
       image_style_inline_full_width: '0'
       image_style_large: '0'
       image_style_linkit_result_thumbnail: '0'
+      image_style_logo: '0'
       image_style_max_1300x1300: '0'
       image_style_max_2600x2600: '0'
       image_style_max_325x325: '0'
@@ -80,6 +86,7 @@ filters:
       image_style_portrait_medium: '0'
       image_style_portrait_tiny: '0'
       image_style_thumbnail: '0'
+      image_style_top_news: '0'
   filter_responsive_tables_filter:
     id: filter_responsive_tables_filter
     provider: responsive_tables_filter
