--- a/config/sync/editor.editor.restricted_html.yml
+++ b/config/sync/editor.editor.restricted_html.yml
@@ -47,4 +47,7 @@ settings:
         - '<h4 id>'
         - '<h5 id>'
         - '<h6 id>'
+    linkit_extension:
+      linkit_enabled: true
+      linkit_profile: default
 image_upload: {  }
