--- a/config/sync/webform.webform.contact_general.yml
+++ b/config/sync/webform.webform.contact_general.yml
@@ -250,7 +250,7 @@ handlers:
       exclude_empty: true
       exclude_empty_checkbox: false
       exclude_attachments: false
-      html: true
+      html: false
       attachments: false
       twig: false
       theme_name: ''
@@ -287,7 +287,7 @@ handlers:
       exclude_empty: true
       exclude_empty_checkbox: false
       exclude_attachments: false
-      html: true
+      html: false
       attachments: false
       twig: false
       theme_name: ''
