Absender-Adresse Kontaktfomular von Ersteller verwenden.

--- a/config/sync/webform.webform.contact_general.yml
+++ b/config/sync/webform.webform.contact_general.yml
@@ -236,9 +236,9 @@ handlers:
       bcc_options: {  }
       cc_mail: ''
       cc_options: {  }
-      from_mail: _default
+      from_mail: '[webform_submission:values:e_mail_adresse:raw]'
       from_options: {  }
-      from_name: _default
+      from_name: '[webform_submission:values:name:raw]'
       reply_to: ''
       return_path: ''
       sender_mail: ''
