Neue Settings-Properties durch Core-Update, Paragraphs auch in Simple Page.

--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.page.body
     - field.field.node.page.field_gallery_above_body
     - field.field.node.page.field_gallery_below_body
+    - field.field.node.page.field_new_par_various
     - node.type.page
   module:
     - entity_reference_revisions
@@ -43,10 +44,19 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
+  field_new_par_various:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 3
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 3
+    weight: 4
     region: content
 hidden:
   langcode: true
