--- a/config/sync/core.entity_view_mode.paragraph.infoblock.yml
+++ b/config/sync/core.entity_view_mode.paragraph.infoblock.yml
@@ -6,5 +6,6 @@ dependencies:
     - paragraphs
 id: paragraph.infoblock
 label: Infoblock
+description: ''
 targetEntityType: paragraph
 cache: true
