--- a/config/sync/core.entity_view_mode.user.referenced_user.yml
+++ b/config/sync/core.entity_view_mode.user.referenced_user.yml
@@ -6,5 +6,6 @@ dependencies:
     - user
 id: user.referenced_user
 label: 'Referenzierter User'
+description: ''
 targetEntityType: user
 cache: true
