--- a/config/sync/core.entity_form_mode.user.register.yml
+++ b/config/sync/core.entity_form_mode.user.register.yml
@@ -8,5 +8,6 @@ _core:
   default_config_hash: flXhTcp55yLcyy7ZLOhPGKGZobZQJdkAFVWV3LseiuI
 id: user.register
 label: Registrieren
+description: ''
 targetEntityType: user
 cache: true
