--- a/config/sync/core.entity_view_mode.node.full.yml
+++ b/config/sync/core.entity_view_mode.node.full.yml
@@ -8,5 +8,6 @@ _core:
   default_config_hash: ElrtInxGjZd7GaapJ5O9n-ugi2hG2IxFivtgn0tHOsk
 id: node.full
 label: 'Vollständiger Inhalt'
+description: ''
 targetEntityType: node
 cache: true
