--- a/config/sync/core.entity_view_mode.paragraph.preview.yml
+++ b/config/sync/core.entity_view_mode.paragraph.preview.yml
@@ -8,5 +8,6 @@ _core:
   default_config_hash: fAWHL-ZbCR4HOdE03GYzQfiMYfEvVhTWNBHWcU_pa18
 id: paragraph.preview
 label: Vorschau
+description: ''
 targetEntityType: paragraph
 cache: true
