--- a/config/sync/core.entity_view_mode.paragraph.slideshow.yml
+++ b/config/sync/core.entity_view_mode.paragraph.slideshow.yml
@@ -6,5 +6,6 @@ dependencies:
     - paragraphs
 id: paragraph.slideshow
 label: Slideshow
+description: ''
 targetEntityType: paragraph
 cache: true
