--- a/config/sync/system.mail.yml
+++ b/config/sync/system.mail.yml
@@ -3,3 +3,10 @@ _core:
 langcode: de
 interface:
   default: maillog
+mailer_dsn:
+  scheme: sendmail
+  host: default
+  user: null
+  password: null
+  port: null
+  options: {  }
