--- a/config/sync/core.entity_view_display.node.player.default.yml
+++ b/config/sync/core.entity_view_display.node.player.default.yml
@@ -12,7 +12,7 @@ dependencies:
     - image.style.medium
     - node.type.player
   module:
-    - image
+    - config_default_image
     - text
     - user
 id: node.player.default
@@ -45,11 +45,18 @@ content:
     weight: 1
     region: content
   field_player_image:
-    type: image
+    type: config_default_image
     label: visually_hidden
     settings:
-      image_link: ''
       image_style: medium
+      image_link: ''
+      default_image:
+        path: /themes/hsk_zymphonies/images/default-profile-image.png
+        alt: Standard-Profilbild
+        title: ''
+        use_image_style: 0
+        width: null
+        height: null
       image_loading:
         attribute: lazy
     third_party_settings: {  }
