DWZ-Rangliste in Mitgliederliste umbenannt

--- a/config/sync/views.view.dwz_list.yml
+++ b/config/sync/views.view.dwz_list.yml
@@ -26,7 +26,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: DWZ-Rangliste
+      title: Mitgliederliste
       fields:
         counter:
           id: counter
